Create update state in events
